--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -111,14 +111,14 @@ header {
     width: 100%;
     padding: 5rem 0 4rem;
     border-radius: 0 0 1.5rem 1.5rem;
-    box-shadow: 0 2px 4px hsla(38%, 4%, 15%, .15);
-    transition: .4s;
+    box-shadow: 0 2px 4px hsla(38%, 4%, 15%, 0.15);
+    transition: 0.4s;
   }
 }
 
 .nav__list {
   text-align: center;
-  display: flex; 
+  display: flex;
   flex-direction: column;
   row-gap: 2rem;
 }
@@ -142,15 +142,146 @@ header {
 }
 
 /*=============== HOME ===============*/
+.home {
+  background-color: var(--first-color);
+  padding: 9rem 0 2rem;
+  height: 100vh;
+
+  display: grid;
+}
+
+.home__container {
+  display: grid;
+  align-content: center;
+  row-gap: 2rem;
+}
+
+.home__data {
+  text-align: center;
+}
+
+.home__subtitle {
+  display: block;
+}
+
+.home__title {
+  font-size: var(--biggest-font-size);
+  margin-bottom: 0.75rem 0;
+}
+
+.home__button {
+  margin-top: 2rem;
+  display: iniline-block;
+  background-color: var(--text-color);
+  color: #fff;
+  padding: 0.8rem 1.5rem;
+  border-radius: 3rem;
+  transition: 0.4s;
+}
+
+.home__button:hover {
+  box-shadow: 0 4px 12px hsla(38, 69%, 8%, 0.2);
+}
+
+.home__img img {
+  width: 230px;
+  animation: floty 1.8s infinite alternate;
+}
+
+.home__img {
+  justify-self: center;
+}
+
+.home__shadow {
+  width: 130px;
+  height: 24px;
+  background-color: hsla(38, 21%, 19%, 0.16);
+  border-radius: 50%;
+  margin: 0 auto;
+  filter: blur(7px);
+  animation: shadow 1.8s infinite alternate;
+}
+
+.home__footer {
+  display: flex;
+  justify-content: center;
+  column-gap: 0.5rem;
+  font-size: var(--smaller-font-size);
+  align-self: flex-end;
+}
 
 /* Animate ghost */
+@keyframes floty {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(15px);
+  }
+}
+
+@keyframes shadow {
+  0% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(0.85, 0.85);
+  }
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width: 320px) {
+  .home {
+    padding-top: 7rem;
+  }
+}
 
 /* For medium devices */
+@media screen and (min-width: 767px) {
+  .nav {
+    height: calc(var(--header-height) + 1.5rem);
+  }
+
+  .nav__toggle,
+  .nav__close {
+    display: none;
+  }
+  .nav__list {
+    flex-direction: row;
+    column-gap: 3.5rem;
+  }
+}
 
 /* For large devices */
+@media screen and (min-width: 1024px) {
+  .home__container {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    column-gap: 2rem;
+  }
+
+  .home__data {
+    text-align: initial;
+  }
+
+  .home__img img {
+    width: 400px;
+  }
+
+  .home__shadow {
+    width: 250px;
+    height: 44px;
+    filter: blur(15px);
+  }
+}
+
+@media screen and (min-width: 1048px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 
 /* For 2K resolutions (2048 x 1152, 2048 x 1536) */
 
